# Synera1-2

./: .gitignore  CMakeLists.bak  CMakeLists.txt  README.md  build.ps1  launcher.rc  launcher.res  launcher_main.cpp  run.bat  vcpkg-configuration.json
markdowns/: about.md  help.md  help_intro.md  help_operation.md
markdowns/characters/: alice.md  aya.md  hatate.md  koishi.md  marisa.md  reimu.md  sakuya.md  sanae.md  youmu.md
src/: main.cpp
src/combat/: Pathfinding.cpp  Pathfinding.h  Skill.cpp  Skill.h  StateMachine.cpp  StateMachine.h  Targeting.cpp  Targeting.h
src/core/: Bench.cpp  Bench.h  Board.cpp  Board.h  Commondata.h  EnemyAI.cpp  EnemyAI.h  EnemySpawner.cpp  EnemySpawner.h  Game.cpp  Game.h  Player.cpp  Player.h  SaveManager.cpp  SaveManager.h  Shop.cpp  Shop.h  Unit.cpp  Unit.h
src/ui/: BattleLogWidget.cpp  BattleLogWidget.h  BoardWidget.cpp  BoardWidget.h  ChartWidget.cpp  ChartWidget.h  FontConfig.cpp  FontConfig.h  MainWindow.cpp  MainWindow.h  MusicPlayerWidget.cpp  MusicPlayerWidget.h  ShopWidget.cpp  ShopWidget.h  ShopWindow.cpp  ShopWindow.h  StartWindow.cpp  StartWindow.h  StatsWidget.cpp  StatsWidget.h
src/units/: AliceMargatroid.cpp  AliceMargatroid.h  HakureiReimu.cpp  HakureiReimu.h  HimekaidouHatate.cpp  HimekaidouHatate.h  IzayoiSakuya.cpp  IzayoiSakuya.h  KirisameMarisa.cpp  KirisameMarisa.h  KochiyaSanae.cpp  KochiyaSanae.h  KomeijiKoishi.cpp  KomeijiKoishi.h  KonpakuYoumu.cpp  KonpakuYoumu.h  ShameimaruAya.cpp  ShameimaruAya.h  UnitFactory.cpp  UnitFactory.h
